--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: var(--clr-purple);
+    border-radius: 0.5em 0.5em 0 0;
     opacity: 0.6;
 }
 
@@ -184,6 +185,10 @@ body {
         height: auto;
         max-width: 540px;
         max-height: 446px;
+    }
+
+    .stats-card picture::before {
+        border-radius: 0 0.5em 0.5em 0;
     }
 
     .content {
