--- a/style.css
+++ b/style.css
@@ -104,28 +104,15 @@ body {
 }
 
 .stats-card picture {
-    position: relative;
-    display: inline-block;
-}
-
-.stats-card picture::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--clr-purple);
     border-radius: 0.5em 0.5em 0 0;
-    opacity: 0.6;
+    background-color: var(--clr-purple);
 }
 
 .stats-card picture img {
     display: block;
     width: 100%;
     height: auto;
-
-    border-radius: 0.5em 0.5em 0 0;
+    mix-blend-mode: multiply;
 }
 
 .content {
@@ -180,14 +167,13 @@ body {
     }
 
     .stats-card picture img {
-        border-radius: 0 0.5em 0.5em 0;
         width: auto;
         height: auto;
         max-width: 540px;
         max-height: 446px;
     }
 
-    .stats-card picture::before {
+    .stats-card picture {
         border-radius: 0 0.5em 0.5em 0;
     }
 
